# ffs-expianed-modifier

./: .gitignore  CMakeLists.txt  README.md
include/: fileIo.h  stringEncodingProcess.h  stringRegexRuledModify.h
src/: fileIo.cpp  main.cpp  stringEncodingProcess.cpp  stringRegexRuledModify.cpp
